@@ -43,6 +43,8 @@ IN DEVELOPMENT
       will not encounter this as it is single threaded for working tree
       operations. (Robert Collins)
 
+    * The C extensions now build on python 2.4 (Robert Collins, #271939)
+
   BUG FIXES:
 
     * Branching from a shared repository on a smart server into a new
